# libluahook

./: .gitignore  README.md  README.zh-CN.md  build.gradle.kts  gradle.properties  settings.gradle.kts
androlua/: build.gradle.kts  proguard-rules.pro
androlua/src/main/java/org/luaj/lib/jse/: JavaClass.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
luahook-core/: build.gradle.kts
luahook-core/src/main/: AndroidManifest.xml
luahook-core/src/main/java/com/androlua/: LuaApplication.kt  LuaEnhancer.kt  LuaMethodInterceptor.kt
luahook-core/src/main/java/io/github/kulipai/luahook/core/androlua/: LuaScriptUtils.kt
luahook-core/src/main/java/io/github/kulipai/luahook/core/file/: WorkspaceFileManager.kt
luahook-core/src/main/java/io/github/kulipai/luahook/core/log/: LogUtils.kt
luahook-core/src/main/java/io/github/kulipai/luahook/hook/activity/: EmptyActivity.kt
luahook-core/src/main/java/io/github/kulipai/luahook/hook/api/: HookLib.kt  LuaActivity.kt  LuaDrawableLoader.kt  LuaFile.kt  LuaHttp.kt  LuaImport.kt  LuaJson.kt  LuaResource.kt  LuaSharedPreferences.kt  LuaTask.kt  LuaUtil.kt
luahook-core/src/main/java/io/github/kulipai/luahook/hook/entry/: LpparamWrapper.kt  (+1 more)
luahook-ext-dexkit/: build.gradle.kts
luahook-ext-dexkit/src/main/: AndroidManifest.xml
luahook-ext-layout/: build.gradle.kts  proguard-rules.pro
luahook-ext-native/: build.gradle.kts
luahook-ext-native/src/main/: AndroidManifest.xml
luahook-ext-native/src/main/cpp/: CMakeLists.txt  luahook.cpp
luahook-ext-native/src/main/cpp/memory/include/: SysRead.h
(+11 files in other folders)
